--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
 <head>
   <meta charset="UTF-8">
   <title>Image Album Reviewer</title>
-  <link rel="stylesheet" href="app.css">
-  <link rel="stylesheet" href="elements.css">
-  <link rel="stylesheet" href="extras.css">
+  <link rel="stylesheet" href="styles/app.css">
+  <link rel="stylesheet" href="styles/elements.css">
+  <link rel="stylesheet" href="styles/extras.css">
   <!-- Custom Components -->
   <link rel="stylesheet" href="components/img-card.css">
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js" type="text/javascript"></script>
-  <script src="config.js" type="text/javascript"></script>
-  <script src="tools.js" type="text/javascript"></script>
+  <script src="js/config.js" type="text/javascript"></script>
+  <script src="js/tools.js" type="text/javascript"></script>
   <!-- Custom Components -->
   <script src="components/img-card.js" type="text/javascript"></script>
 </head>
@@ -101,7 +101,7 @@
       </div>
   </div>
 
-  <script src="app.js" type="text/javascript"></script>
+  <script src="js/app.js" type="text/javascript"></script>
 </body>
 
 </html>
