Rename share to publ Bypass firefox's tracking protection since this isn't actually a share button

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="toolbar bg-lighter">
       <div>
         <button class="bg-blue ic-plus" id='addimg-open'>Add Images</button>
-        <button class="bg-green ic-share" id='share-open'>Comments Summary</button>
+        <button class="bg-green ic-publ" id='publ-open'>Comments Summary</button>
       </div>
     </div>
     <div id="gallery" class="gallery"></div>
@@ -73,7 +73,7 @@
           </div>
         </div>
       </div>
-      <div id="share" class="popup share bg-lighter hidden">
+      <div id="publ" class="popup publ bg-lighter hidden">
         <div class="window tb-bottom">
           <div class="flex-down">
             <div class="switchbox">
@@ -83,18 +83,18 @@
             </div>
             <div class="textbox">
               <textarea
-                id="share-block"
+                id="publ-block"
               ></textarea>
             </div>
           </div>
           <div class="toolbar">
             <div>
-              <button class="bg-blue" id='share-copy'>
+              <button class="bg-blue" id='publ-copy'>
                 Copy Summary to Clipboard
               </button>
             </div>
             <div class="toolbar-right">
-              <button class="bg-red" id='share-back'>Back</button>
+              <button class="bg-red" id='publ-back'>Back</button>
             </div>
           </div>
         </div>
